# LTSearch

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  Dockerfile  README.md  docker-compose.http.yml  docker-compose.local-ltembed.yml  docker-compose.local.yml  docker-compose.localstack.yml  docker-compose.moto.yml  rust-toolchain.toml  template.sam-e2e.yaml  template.yaml
.github/workflows/: ci.yml  publish-images.yml  release.yml
.opencode/: session-ses_311a-2.md  session-ses_311a.md
docs/: TurboQuant.md  arch.md  architecture-review-2026-07-05.md  deployment.md  design.md
docs/adr/: 0001-aws-optional-runtime-profiles.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/superpowers/plans/: 2026-03-14-doc-alignment.md  2026-03-14-lambda-verification-mvp.md  2026-03-14-query-core-mvp.md  2026-03-14-write-build-publish-mvp.md  2026-03-15-localstack-write-build-publish.md  2026-03-15-toolchain-and-real-lancedb.md  2026-03-15-write-api-batch-id-restart-safety.md  2026-03-16-moto-write-build-publish-migration.md  2026-03-16-query-lambda-implementation.md  2026-03-24-sam-e2e-arm-builder-images.md  2026-03-26-turbo-hybrid-search.md  2026-04-25-turboquant-searcher.md  2026-07-14-aws-optional-runtime-profiles.md  2026-07-14-http-server-mode-ghcr.md  2026-07-15-issue-108-sqlite-single-image.md  2026-07-15-local-profile-e2e.md  2026-07-16-issue-109-lambda-zip.md  2026-07-17-issue-110-static-lance-turboquant.md  2026-07-17-issue-111-ltembed-layer.md  2026-07-18-issue-112-pr2-dual-version-query.md  2026-07-18-issue-112-static-release-activation.md  2026-07-19-issue-113-release-artifacts.md
docs/superpowers/specs/: 2026-03-15-head-manifest-path-doc-alignment-design.md  2026-03-15-localstack-write-build-publish-design.md  2026-03-16-moto-write-build-publish-migration-design.md  2026-03-16-query-lambda-design.md  2026-03-26-turbo-hybrid-search-design.md  2026-04-25-turboquant-searcher-design.md  2026-07-07-turbo-static-title-context-labels-design.md  2026-07-15-local-profile-e2e-design.md
examples/: emit_static_lance_fixture.rs
sam/: builder.Dockerfile  index_builder_lambda.Dockerfile  index_builder_server.Dockerfile  local-ltembed.Dockerfile  local.Dockerfile  query_lambda.Dockerfile  query_server.Dockerfile  write_lambda.Dockerfile  write_server.Dockerfile
scripts/: check-lambda-size-budget.sh  package-lambda-zips.sh  package-model-assets.sh  package-release.sh  verify-fast.sh  verify-moto.sh
scripts/e2e/: build-local-ltembed-image.sh  lib.sh  local_http_lib.sh  run-http-flow.sh  run-http-server-flow.sh  run-local-image-flow.sh  run-local-real-flow.sh  run-local-server-flow.sh  run-sam-local-invoke-e2e.sh  run-sam-ltembed-invoke-e2e.sh  run-sam-zip-invoke-e2e.sh  run-static-release-flow.sh  start-sam-moto.sh  stop-sam-moto.sh
src/: app.rs  aws_wiring.rs  bootstrap.rs  build_lambda.rs  build_worker.rs  config.rs  contracts.rs  error.rs  lambda_events.rs  lib.rs  query_lambda.rs  query_service.rs  write_lambda.rs
src/adapters/: mod.rs  s3_artifact_sync.rs  s3_publish.rs  s3_wal.rs  sqs_build_queue.rs  sqs_job_source.rs
src/embedding/: generator.rs  ltembed.rs  mod.rs  model_assets.rs  provider.rs
src/http/: build.rs  mod.rs  query.rs  write.rs
src/index/: assets.rs  header.rs  lance_source.rs  meta.rs  meta_ext.rs  mmap_index.rs  mod.rs  record.rs  release_manifest.rs  static_builder.rs  static_release.rs  static_source.rs  turbo_codec.rs
src/indexing/: builder.rs  mod.rs  publisher.rs  static_publisher.rs
src/local/: fs_build_queue.rs  fs_publish.rs  fs_wal.rs  mod.rs  noop_sync.rs
src/local/sqlite/: head.rs  manifest.rs  mod.rs  queue.rs  schema.rs  static_release.rs  wal.rs
src/models/: index.rs  mod.rs  search.rs  write.rs
src/query/: context_builder.rs  filter.rs  keyword_searcher.rs  lance_cache.rs  lance_decode.rs  mod.rs  ranker.rs  retrieval_common.rs  router.rs  turbo_searcher.rs  vector_searcher.rs
src/storage/: head.rs  manifest_store.rs  mod.rs  s3_paths.rs  staged_publish.rs  static_head.rs  static_release_store.rs
src/turbo/: encoder.rs  mmap_index.rs  mod.rs  scorer.rs  types.rs
src/write/: api.rs  mod.rs  wal.rs
tests/: build_worker_test.rs  builder_artifact_contract_test.rs  contracts_facade_test.rs  embedding_ltembed_test.rs  embedding_provider_test.rs  http_build_test.rs  http_common_test.rs  http_query_test.rs  http_write_test.rs  index_builder_lambda_test.rs  index_builder_test.rs  keyword_searcher_test.rs  lance_source_test.rs  lancedb_compile_smoke_test.rs  local_build_http_test.rs  ltembed_integration_test.rs  manifest_store_test.rs  mmap_index_assets_test.rs  mmap_index_test.rs  models_test.rs  publisher_test.rs  query_build_flow_test.rs  query_flow_test.rs  query_lambda_test.rs  query_service_test.rs  ranker_test.rs  router_test.rs  runtime_aws_test.rs  runtime_local_test.rs  search_consumes_built_artifacts_test.rs  static_activate_cli_test.rs  static_activation_test.rs  static_index_builder_test.rs  static_release_builder_test.rs  static_release_cli_test.rs  static_release_determinism_test.rs  test_ci_workflow.py  test_e2e_fixtures.py  test_image_no_static_convention.py  test_lambda_zip_packaging.py  (+24 more)
tests/common/: mod.rs
tests/fixtures/e2e/: documents.json  query_request.json  query_request_batch2.json  query_request_real.json  query_request_semantic.json  write_request.json  write_request_batch2.json
tests/support/: mod.rs
