[workspace]
members = ["."]
resolver = "2"

[patch.crates-io]
protobuf-src = { path = "vendor/protobuf-src" }

[workspace.dependencies]
serde = "1.0"
thiserror = "1.0"
tokio = "1.35"
arrow-array = "57.2"
arrow-schema = "57.2"
lance = { version = "=2.0.0", default-features = false, features = ["protoc"] }
lancedb = "0.26.2"

[package]
name = "ltsearch"
version = "0.1.0"
edition = "2021"

[features]
default = []
ltembed = ["dep:ltembed"]

[dependencies]
async-trait = "0.1"
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-sqs = "1"
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = "0.3"
lance = { workspace = true }
lancedb = { workspace = true }
lambda_runtime = "0.13"
ltembed = { git = "https://github.com/Lychee-Technology/LTEmbed", branch = "main", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tantivy = "=0.24.2"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
serde = { workspace = true }
serde_json = "1.0"

[lib]
path = "src/lib.rs"
