[workspace]
members = ["."]
resolver = "2"

[patch.crates-io]
protobuf-src = { path = "vendor/protobuf-src" }

[workspace.dependencies]
serde = "1.0"
thiserror = "1.0"
tokio = "1.35"
arrow-array = "58"
arrow-schema = "58"
lance = { version = "=8.0.0", default-features = false, features = ["protoc"] }
# lance 8.0.0's top-level `protoc` feature does not forward to lance-datafusion,
# whose build script needs protoc. Enable it directly so the vendored protobuf-src
# (see [patch.crates-io]) supplies protoc without a system install.
lance-datafusion = { version = "=8.0.0", features = ["protoc"] }
lancedb = "0.31.0"

[package]
name = "ltsearch"
version = "0.1.0"
edition = "2021"

[features]
# Default to the AWS-free local profile; opt into aws/lambda/ltembed explicitly.
default = ["local"]
local = ["server", "dep:rusqlite"]
server = ["dep:axum"]
aws = ["server", "dep:aws-config", "dep:aws-sdk-s3", "dep:aws-sdk-sqs"]
lambda = ["aws", "dep:lambda_runtime"]
ltembed = ["dep:ltembed"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", optional = true }
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-sdk-sqs = { version = "1", optional = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = "0.3"
lance = { workspace = true }
lance-datafusion = { workspace = true }
lancedb = { workspace = true }
lambda_runtime = { version = "0.13", optional = true }
ltembed = { git = "https://github.com/Lychee-Technology/LTEmbed", branch = "main", optional = true }
memmap2 = "0.9"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tantivy = "=0.24.2"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
serde = { workspace = true }
serde_json = "1.0"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "turbo_index_builder"
path = "src/bin/turbo_index_builder.rs"
required-features = ["aws"]

[[bin]]
name = "query_lambda"
path = "src/bin/query_lambda.rs"
required-features = ["lambda"]

[[bin]]
name = "write_lambda"
path = "src/bin/write_lambda.rs"
required-features = ["lambda"]

[[bin]]
name = "index_builder_lambda"
path = "src/bin/index_builder_lambda.rs"
required-features = ["lambda"]

[[bin]]
name = "query_server"
path = "src/bin/query_server.rs"
required-features = ["aws"]

[[bin]]
name = "write_server"
path = "src/bin/write_server.rs"
required-features = ["aws"]

[[bin]]
name = "index_builder_server"
path = "src/bin/index_builder_server.rs"
required-features = ["aws"]
