[workspace]
members = ["."]
resolver = "2"

[patch.crates-io]
protobuf-src = { path = "vendor/protobuf-src" }

[workspace.dependencies]
serde = "1.0"
thiserror = "1.0"
tokio = "1.35"
arrow-array = "58"
arrow-schema = "58"
lance = { version = "=8.0.0", default-features = false, features = ["protoc"] }
# lance 8.0.0's top-level `protoc` feature does not forward to lance-datafusion,
# whose build script needs protoc. Enable it directly so the vendored protobuf-src
# (see [patch.crates-io]) supplies protoc without a system install.
lance-datafusion = { version = "=8.0.0", features = ["protoc"] }
lancedb = "0.31.0"

# Lambda ZIP 尺寸优化（#111）：lance/datafusion 依赖体量大，此前 strip 后仍
# ~180 MiB，距 250MB 单函数硬限余量有限。opt-level=z + thin LTO + strip +
# panic=abort 换体积；代价：release 编译显著变慢，panic 不再 unwind（进程
# 直接 abort，Lambda 靠容器回收兜底；测试构建不受影响，cargo 对 test
# harness 强制 unwind）。LTO 用 thin 而非 fat：fat 在 Docker/CI 内存下
# 链接本依赖图会 OOM（实测 cannot allocate memory），thin 的体积收益接近。
[profile.release]
opt-level = "z"
lto = "thin"
strip = true
panic = "abort"

[package]
name = "ltsearch"
version = "0.1.0"
edition = "2021"

[features]
# Default to the AWS-free local profile; opt into aws/lambda/ltembed explicitly.
default = ["local"]
local = ["server", "dep:rusqlite"]
server = ["dep:axum"]
aws = ["server", "dep:aws-config", "dep:aws-sdk-s3", "dep:aws-sdk-sqs"]
lambda = ["aws", "dep:lambda_runtime"]
ltembed = ["dep:ltembed"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", optional = true }
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-sdk-sqs = { version = "1", optional = true }
base64 = "0.22"
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = "0.3"
lance = { workspace = true }
lance-datafusion = { workspace = true }
lancedb = { workspace = true }
lambda_runtime = { version = "0.13", optional = true }
ltembed = { git = "https://github.com/Lychee-Technology/LTEmbed", branch = "main", optional = true }
memmap2 = "0.9"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
tantivy = "=0.24.2"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
serde = { workspace = true }
serde_json = "1.0"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lib]
path = "src/lib.rs"

# 单二进制本地入口（#124）：组合根用 SQLite durability，因此需要完整的 local
# feature（server 只带 axum，不带 rusqlite）。
[[bin]]
name = "ltsearch"
path = "src/bin/ltsearch.rs"
required-features = ["local"]

[[bin]]
name = "turbo_index_builder"
path = "src/bin/turbo_index_builder.rs"
required-features = ["aws"]

[[bin]]
name = "query_lambda"
path = "src/bin/query_lambda.rs"
required-features = ["lambda"]

[[bin]]
name = "write_lambda"
path = "src/bin/write_lambda.rs"
required-features = ["lambda"]

[[bin]]
name = "index_builder_lambda"
path = "src/bin/index_builder_lambda.rs"
required-features = ["lambda"]

[[bin]]
name = "query_server"
path = "src/bin/query_server.rs"
required-features = ["aws"]

[[bin]]
name = "write_server"
path = "src/bin/write_server.rs"
required-features = ["aws"]

[[bin]]
name = "index_builder_server"
path = "src/bin/index_builder_server.rs"
required-features = ["aws"]

[[bin]]
name = "static_activate"
path = "src/bin/static_activate.rs"
required-features = ["aws"]

# 静态 release v3 端到端流（#112 PR-2 Task 14）的 Lance fixture 生成器：
# arrow+lancedb 造 512 维 documents 表，供 scripts/e2e/run-static-release-flow.sh
# 驱动 static-build→activate→query。仅 local profile 需要（与 ltsearch bin 同 gated）。
[[example]]
name = "emit_static_lance_fixture"
path = "examples/emit_static_lance_fixture.rs"
required-features = ["local"]
